input elements no longer have inset shadows on iOS

--- a/app/styles/_bootstrap-overrides.scss
+++ b/app/styles/_bootstrap-overrides.scss
@@ -11,6 +11,7 @@ label {
   font-weight: 200;
   box-shadow: none;
   transition-duration: $focus-transition-duration;
+  -webkit-appearance: none; // Get rid of inset shadows on iOS
 
   &:focus {
     box-shadow: none;
